--- a/appInventario/nbproject/project.properties
+++ b/appInventario/nbproject/project.properties
@@ -35,14 +35,10 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/appInventario
 endorsed.classpath=
 excludes=
-file.reference.mssql-jdbc-12.2.0.jre11.jar=..\\mssql-jdbc-12.2.0.jre11.jar
-file.reference.mssql-jdbc-12.2.0.jre8.jar=..\\mssql-jdbc-12.2.0.jre8.jar
-file.reference.sqljdbc41.jar=C:\\Users\\luisb\\OneDrive\\Documents\\NetBeansProjects\\sqljdbc41.jar
+file.reference.sqljdbc41.jar=../sqljdbc41.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mssql-jdbc-12.2.0.jre11.jar}:\
-    ${file.reference.mssql-jdbc-12.2.0.jre8.jar}:\
     ${file.reference.sqljdbc41.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
