--- a/appInventario/nbproject/project.properties
+++ b/appInventario/nbproject/project.properties
@@ -35,11 +35,11 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/appInventario
 endorsed.classpath=
 excludes=
-file.reference.sqljdbc41.jar=../sqljdbc41.jar
+file.reference.mssql-jdbc-12.2.0.jre11.jar=..\\mssql-jdbc-12.2.0.jre11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqljdbc41.jar}
+    ${file.reference.mssql-jdbc-12.2.0.jre11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
