--- a/appInventario/nbproject/project.properties
+++ b/appInventario/nbproject/project.properties
@@ -5,6 +5,7 @@ annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=appInventario
 application.vendor=luisb
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -35,13 +36,19 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/appInventario
 endorsed.classpath=
 excludes=
+file.reference.controlsfx-8.40.11.jar=C:\\Users\\franc\\Downloads\\controlsfx-8.40.11.jar
+file.reference.FS-FactorySystem.jar=C:\\Users\\franc\\Downloads\\FS-FactorySystem.jar
+file.reference.jfoenix-8.0.10.jar=C:\\Users\\franc\\Downloads\\jfoenix-8.0.10.jar
 file.reference.mssql-jdbc-12.2.0.jre11.jar=..\\mssql-jdbc-12.2.0.jre11.jar
 file.reference.mssql-jdbc-12.2.0.jre8.jar=..\\mssql-jdbc-12.2.0.jre8.jar
 includes=**
 jar.compress=false
 javac.classpath=\
+    ${file.reference.FS-FactorySystem.jar}:\
     ${file.reference.mssql-jdbc-12.2.0.jre11.jar}:\
-    ${file.reference.mssql-jdbc-12.2.0.jre8.jar}
+    ${file.reference.mssql-jdbc-12.2.0.jre8.jar}:\
+    ${file.reference.jfoenix-8.0.10.jar}:\
+    ${file.reference.controlsfx-8.40.11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
