--- a/appInventario/nbproject/project.properties
+++ b/appInventario/nbproject/project.properties
@@ -36,11 +36,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/appInventario
 endorsed.classpath=
 excludes=
+file.reference.Lib22.jar=C:\\Users\\franc\\Downloads\\Lib22.jar
 file.reference.mssql-jdbc-12.2.0.jre11.jar=..\\mssql-jdbc-12.2.0.jre11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mssql-jdbc-12.2.0.jre11.jar}
+    ${file.reference.mssql-jdbc-12.2.0.jre11.jar}:\
+    ${file.reference.Lib22.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
