--- a/appInventario/nbproject/private/private.properties
+++ b/appInventario/nbproject/private/private.properties
@@ -2,8 +2,7 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
-file.reference.Lib22.jar=C:\\Users\\Marcos\\Documents\\GitHub\\proyectoIngSoftware\\Lib22.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\Marcos\\AppData\\Roaming\\NetBeans\\13\\build.properties
+user.properties.file=C:\\Users\\franc\\AppData\\Roaming\\NetBeans\\16\\build.properties
