--- a/appInventario/nbproject/project.properties
+++ b/appInventario/nbproject/project.properties
@@ -39,14 +39,12 @@ excludes=
 file.reference.Lib22.jar=C:\\Users\\franc\\Downloads\\Lib22.jar
 file.reference.Lib22.jar-1=..\\Lib22.jar
 file.reference.mssql-jdbc-12.2.0.jre11.jar=..\\mssql-jdbc-12.2.0.jre11.jar
-file.reference.poi-3.7-20101029.jar=..\\poi-3.7-20101029.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mssql-jdbc-12.2.0.jre11.jar}:\
     ${file.reference.Lib22.jar}:\
-    ${file.reference.Lib22.jar-1}:\
-    ${file.reference.poi-3.7-20101029.jar}
+    ${file.reference.Lib22.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
